# tkDNN

./: .gitignore  .gitmodules  CMakeLists.txt  Issues.md  LICENSE  README.md  README_seg.md  bag_server.cpp  codeql-analysis.yml  config.yaml  darknetTR.py  handler.cpp  inf.cpp  install_OpenCV4.sh  main.cpp  run.sh  test_all_tests.sh  tkDNNConfig.cmake
cmake/: FindCUDNN.cmake  cmake_uninstall.cmake.in  cuda_script.exp  cuda_script.lib  getCudaArch.cu  tkDNNConfig.cmake
config/: config.yaml
demo/: config.yaml  config_tetra.yaml  demoConfig.yaml
demo/demo/: darknetTR.cpp  darknetTR.h  demo.cpp  demo3D.cpp  demoDepth.cpp  demoTracker.cpp  demo_centernet.cpp  demo_mobilenet.cpp  demo_yolo3.cpp  map.cpp  seg_demo.cpp
demo/detection/: detection.cpp
demo/live/: live.cpp
demo/server/: server_less_dummy.cpp
docker/: Dockerfile  Dockerfile.base  README.md  docker-compose.yml  docker_launch.sh
docker/assets/: entrypoint_setup.sh  terminator_config
docs/: README_2d3dtracking.md  README_depth.md  README_seg.md  centerTrack_results.md  demo.md  exporting_weights.md  mAP_demo.md  windows.md
include/: BoxDetection.h  Layer.h  Network.h  NetworkRT.h  Yolo3Detection.h  boxDetection.h  calibration.h  cameraUtils.h  classutils.h  configuration.h  evaluation.h  kernels.h  message.h  send.h  serialize.hpp  sorting.h  tkdnn.h  utils.h  visualization.h
include/models/: Yolo3.h
include/pluginsRT/: ActivationLeakyRT.h  ReorgRT.h  ShortcutRT.h  UpsampleRT.h  YoloRT.h
include/tkDNN/: BoundingBox.h  CenterTrack.h  CenternetDetection.h  CenternetDetection3D.h  CenternetDetection3DTrack.h  DarknetParser.h  DepthNN.h  DetectionNN.h  DetectionNN3D.h  ImuOdom.h  Int8BatchStream.h  Int8Calibrator.h  Layer.h  MobilenetDetection.h  Network.h  NetworkRT.h  NetworkViz.h  SegmentationNN.h  TrackingNN.h  Yolo3Detection.h  baggageDetect.hpp  buffer_func.h  darknet.h  demo_utils.h  dimensionless.h  evaluation.h  handler.h  https_stream.h  image.h  kernels.h  kernelsThrust.h  stb_image.h  stdafx.h  test.h  tkdnn.h  utils.h  utilsNN.h  yoloContainer.h
readme/: README_seg.md
scripts/: checkExecTimes.py  download_validation.py  download_validation.sh  install_OpenCV4.sh  test_all_tests.sh  test_inference.sh
src/: Activation.cpp  BatchNorm.cpp  BoundingBox.cpp  BoxDetection.cpp  CenterTrack.cpp  CenternetDetection.cpp  CenternetDetection3D.cpp  CenternetDetection3DTrack.cpp  Conv2d.cpp  Conv3d.cpp  DarknetParser.cpp  DeformConv2d.cpp  Dense.cpp  Flatten.cpp  Int8BatchStream.cpp  Int8Calibrator.cpp  LSTM.cpp  Layer.cpp  LayerBNWgs.cpp  LayerWgs.cpp  MobilenetDetection.cpp  MulAdd.cpp  Network.cpp  NetworkRT.cpp  NetworkViz.cpp  Padding.cpp  Pooling.cpp  Region.cpp  Reorg.cpp  Reshape.cpp  Resize.cpp  Route.cpp  ScaleChannels.cpp  Shortcut.cpp  Softmax.cpp  Upsample.cpp  Yolo.cpp  Yolo3Detection.cpp  demo_utils.cpp  evaluation.cpp  (+5 more)
src/class_src/: boxDetection.cpp  calibration.cpp  configuration.cpp  message.cpp  visualization.cpp
src/kernels/: activation.mish.cu  activation_elu.cu  activation_leaky.cu  activation_logistic.cu  activation_mish.cu  activation_relu_ceiling.cu  activation_sigmoid.cu  activation_swish.cu  convert.cu  deformable_conv.cu  fill.cu  interleaved_to_planar.cu  normalize.cu  padding.cu  pooling.cu  postprocessing.cu  reorg.cu  resize.cu  scaladd.cu  scale_channels.cu  shortcut.cu  softmax.cu  static_init.cu  upsample.cu
src/pluginsRT/: ActivationLeakyRT.cpp  ActivationLogisticRT.cpp  ActivationMishRT.cpp  ActivationReLUCeilingRT.cpp  ActivationSwishRT.cpp  ConstantPaddingRT.cpp  DeformableConvRT.cpp  FlattenConcatRT.cpp  GeneralizedMeanPoolingPRT.cpp  Int8Calibrator.cpp  MaxPoolingSizeRT.cpp  ReflectionPadding.cpp  RegionRT.cpp  ReorgRT.cpp  ReshapeRT.cpp  ResizeLayerRT.cpp  RouteRT.cpp  ShortcutRT.cpp  UpsampleRT.cpp  YoloRT.cpp
test/: CMakeLists.txt  Makefile  client_img.cpp  server.cpp
tests/: build_models.sh  caffe_weights_exporter.py  simple_dense.py  test.cpp  test_model.py  weights_exporter.py
tests/bdd-csresnext50-panet-spp/: bdd-csresnext50-panet-spp.cpp
tests/bdd-mobilenetv2ssd/: bdd-mobilenetv2ssd.cpp
tests/csresnext50-panet-spp/: csresnext50-panet-spp.cpp
tests/darknet/: csresnext50-panet-spp.cpp  csresnext50-panet-spp_berkeley.cpp  enet_coco_wo_dropout.cpp  viz_yolo3.cpp  yolo2.cpp  yolo2_voc.cpp  yolo2tiny.cpp  yolo3.cpp  yolo3_512.cpp  yolo3_berkeley.cpp  yolo3_coco4.cpp  yolo3_flir.cpp  yolo3_tiny_dilation.cpp  yolo3_voc.cpp  yolo3tiny.cpp  yolo3tiny512.cpp  yolo3tiny_512.cpp  yolo4-csp.cpp  yolo4-csp_crowd.cpp  yolo4-mbzirc-objs.cpp  yolo4-mbzirc-vessels.cpp  yolo4-mbzirc.cpp  yolo4.cpp  yolo4_320.cpp  yolo4_320_coco2.cpp  yolo4_416.cpp  yolo4_512.cpp  yolo4_608.cpp  yolo4_berkeley.cpp  yolo4_berkeley_f1.cpp  yolo4_mmr.cpp  yolo4tiny.cpp  yolo4tiny_512.cpp  yolo4x.cpp  yolov4-csp-swish.cpp
tests/dla34/: dla34.cpp  dla34_weightsexporter.py
tests/dla34_cnet/: dla34_cnet.cpp
tests/dla34_cnet3d/: dla34_cnet3d.cpp
tests/exporters/: caffe_weights_exporter.py
tests/imuodom/: imuodom.cpp  infer.py
tests/mnist/: mnist_model.py  test.cpp  test_mnist.cpp  test_mnistRT.cpp
tests/mobilenetv2ssd/: mobilenetv2ssd.cpp
tests/mobilenetv2ssd512/: mobilenetv2ssd512.cpp
tests/monodepth2/: monodepth2.cpp  monodepth2_1024.cpp  monodepth2_640.cpp  monodepth2_new_format.cpp
tests/resnet101/: env_resnet101.yml  resnet101.cpp  resnet101_weightsexporter.py
tests/resnet101_cnet/: resnet101_cnet.cpp
tests/resnet101_cnet3d/: resnet101_cnet3d.cpp
tests/shelfnet/: shelfnet.cpp  shelfnet_berkeley.cpp  shelfnet_coco.cpp  shelfnet_mapillary.cpp
tests/simple/: test_model.py  test_simple.cpp
tests/test/: test.cpp
tests/test_rtinference/: rtinference.cpp
tests/yolo/: yolo.cfg  yolo.cpp
tests/yolo-tiny/: yolo-tiny.cpp
tests/yolo3/: yolo3.cpp
tests/yolo3_512/: yolo3_512.cpp
tests/yolo3_512tp/: yolo3512.cfg  yolo3_512tp.cpp
tests/yolo3_BCDS6/: yolo3_BCDS6.cpp  yolov3-BCDS6-resize.cfg
tests/yolo3_berkeley/: yolo3_berkeley.cfg  yolo3_berkeley.cpp
tests/yolo3_coco4/: yolo3_coco4.cpp  yolov3-coco4.cfg
tests/yolo3_flir/: yolo3_flir.cfg  (+1 more)
(+117 files in other folders)
